<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MARVEL</string>
    <string name="title_activity_display_sceen" translatable="false">DisplaySceen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="enter_your_username">Enter Your Username</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="sign_in">Sign In</string>
    <string name="example_mail_com">Example@mail.com</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="home">HOME</string>
    <string name="characters">CHARACTERS</string>
    <string name="about">ABOUT</string>
    <string name="contact_us">CONTACT US</string>
    <string name="character">CHARACTER</string>
    <string name="last_of_us" translatable="false">Last Of Us</string>
    <string name="trailer">Trailer</string>
    <string name="story">Story</string>
    <string name="game_studio">Game Studio</string>
    <string name="naughty_dog" translatable="false">Naughty Dog</string>
    <string name="sony_playStation_store">Sony Playstation Store</string>
    <string name="more_about_sony_store" translatable="false">More About Sony Enterteiment</string>
    <string name="_download">Download</string>


    <!-- Strings used for fragments for navigation -->
</resources>
